Corrected margin value alignment in Element Inspector

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/resources/viewer.css
@@ -137,6 +137,7 @@
     position: absolute;
     display: none;
     z-index: 32;
+    text-align: center;
 }
 .contentSymbolsVisible .svMarginValueDiv {
     display: block;
